force-app/main/default/objects/Return_Pet__c/Return_Pet__c.object-meta.xml
<CustomObject>
    <label>Return Pet</label>
    <nameField>
        <label>Return Pet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Return Pets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>