force-app/main/default/objects/Return_Pet__c/fields/Adoption_Record__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adoption Record</label>
    <referenceTo>Adoption_Record__c</referenceTo>
    <relationshipLabel>Return Pets</relationshipLabel>
    <relationshipName>Return_Pets</relationshipName>
    <type>Lookup</type>
</CustomField>