force-app/main/default/objects/Return_Pet__c/fields/Condition_on_return__c.field-meta.xml
<CustomField>
    <fullName>Condition_on_return__c</fullName>
    <inlineHelpText>Describe circumstances or special notes…</inlineHelpText>
    <label>Condition on return</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>