force-app/main/default/objects/Return_Pet__c/fields/Pet__c.field-meta.xml
<CustomField>
    <fullName>Pet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pet</label>
    <referenceTo>Pet__c</referenceTo>
    <relationshipLabel>Return Pets</relationshipLabel>
    <relationshipName>Return_Pets</relationshipName>
    <type>Lookup</type>
</CustomField>