force-app/main/default/objects/Return_Pet__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>