force-app/main/default/objects/Return_Pet__c/fields/Returned_by__c.field-meta.xml
<CustomField>
    <fullName>Returned_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Returned by</label>
    <referenceTo>Adopter__c</referenceTo>
    <relationshipLabel>Return Pets</relationshipLabel>
    <relationshipName>Return_Pets</relationshipName>
    <type>Lookup</type>
</CustomField>